# Tetris---C-Implementation

./: Dev4Modelisation.mdj  README.md
TetrisConsole/: CMakeLists.txt
TetrisConsole/src/: Bag.cpp  Bag.h  Board.cpp  Board.h  CMakeLists.txt  CheckRules.cpp  CheckRules.h  CommonData.cpp  CommonData.h  Controller.cpp  Controller.h  Game.cpp  Game.h  Observable.cpp  Observable.h  Observer.cpp  Observer.h  Position.cpp  Position.h  TetrisBoard.cpp  TetrisBoard.h  UiController.cpp  UiController.h  View.cpp  View.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  tetrisLogo.qrc  uiboard.cpp  uiboard.h  uicontroller.cpp  uicontroller.h  windowsgame.cpp  windowsgame.h  windowsgame.ui
TetrisConsole/src/Controller/: Controller.cpp  Controller.h
TetrisConsole/src/Model/: Bag.cpp  Bag.h  Board.cpp  Board.h  CheckRules.cpp  CheckRules.h  CommonData.h  Game.cpp  Game.h
TetrisConsole/src/Observer/: Observer.h
TetrisConsole/src/Ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui  uicontroller.cpp  uicontroller.h
TetrisConsole/src/View/: View.cpp  View.h
TetrisConsole/src/directoryBrick/: Brick.cpp  Brick.h  i.cpp  i.h  j.cpp  j.h  l.cpp  l.h  s.cpp  s.h  square.cpp  square.h  t.cpp  t.h  z.cpp  z.h
TetrisConsole/tests/: CMakeLists.txt  testGame.cpp
build-TetrisConsole-Desktop_Qt_6_5_3_MinGW_64_bit-Debug/: CMakeCache.txt  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-TetrisConsole-Desktop_Qt_6_5_3_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cmakeFiles-v1-3aa0f8807a89fdc8458c.json  codemodel-v2-6c7aa8624ea5d3b3938e.json  directory-_deps.catch2-build-Debug-a589f0136ced167fb19b.json  directory-src-Debug-c032b6269417a21eb064.json  index-2024-03-08T21-46-20-0065.json  target-Catch2WithMain-Debug-cb2d9e23ffb4f4ace756.json  target-ProjectStructure-Debug-4ef123538d2e57d2ed12.json
build-TetrisConsole-Desktop_Qt_6_5_3_MinGW_64_bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-ee0c7070fa949d404bfd.json  codemodel-v2-9b1f30c45ffe621d9d80.json  directory-_deps.catch2-build.src-Debug-1022d2fb6f3f1592598a.json  index-2024-03-08T21-36-49-0486.json  target-Catch2-Debug-b1e19069071602368fbd.json  target-ProjectStructure-Debug-b68e1d70d1c8d530db3c.json  target-ProjectStructureTests-Debug-a89ac07ee19415f84054.json
build-TetrisConsole-Desktop_Qt_6_5_3_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-TetrisConsole-Desktop_Qt_6_5_3_MinGW_64_bit-Debug/.qtc_clangd/.cache/clangd/index/: Bag.cpp.54A169DBE7876F71.idx  Bag.h.F6C373163F0CF317.idx  Board.cpp.AB12E3E77C76E35F.idx  Board.h.49D5F07FD45FDDA9.idx  Brick.cpp.42EAEBB120989BC6.idx  Brick.h.D38321DEE7889F64.idx  CheckRules.cpp.C43CA7BFFAFBB81D.idx  CheckRules.h.0DC9F36700BB970C.idx  CommonData.cpp.6505940382789636.idx  CommonData.h.E0D364A3B72DD953.idx  Game.cpp.20280D1CC5D35AF1.idx  Game.h.7D1CC300FF1E80D5.idx  MyClass.cpp.725512C9CB357F96.idx  MyClass.h.46A0BE3F9D51777B.idx  Observable.cpp.79E1E0346EA4BAC5.idx  Observable.h.13D6A205D3FEE741.idx  Observer.h.E3B8E20336F45597.idx  Position.cpp.0DAB7CD080F7BA33.idx  Position.h.8E44ADABE15A5D31.idx  View.cpp.39A4424BEA21D600.idx  View.h.2C828FBF838B03BA.idx  array.25E9866757CEF9AF.idx  basic_ios.h.5B05F8DA67EC6948.idx  catch_all.hpp.CF2EE0B3423D3979.idx  catch_analyse.hpp.AF5D9A06063D6ABA.idx  catch_approx.cpp.1CDDC4A92D41BD48.idx  catch_approx.hpp.9180C3E8C2D58878.idx  catch_assertion_handler.cpp.406ECE95606D6716.idx  catch_assertion_handler.hpp.7F1CFF74C06D4DC6.idx  catch_assertion_info.hpp.39EDEB99BD1064CE.idx  catch_assertion_result.cpp.A259A50A8CC07D19.idx  catch_assertion_result.hpp.EF12FC7C544B2841.idx  catch_benchmark.hpp.4BF7B57EC9FBF41E.idx  catch_benchmark_all.hpp.92FCB397BE2FA7B6.idx  catch_benchmark_function.cpp.912718E43203D545.idx  catch_benchmark_function.hpp.9DE687E54FA3F61B.idx  catch_case_insensitive_comparisons.cpp.282FC37027D29E28.idx  catch_case_insensitive_comparisons.hpp.E2E24D3C0F1D40E8.idx  catch_case_sensitive.hpp.656CCBD5B89B3CF9.idx  catch_chronometer.cpp.A1489E784C7A07ED.idx  (+281 more)
build-TetrisConsole-Desktop_Qt_6_5_3_MinGW_64_bit-Debug/src/: cmake_install.cmake
build-TetrisConsole-Desktop_Qt_6_5_3_MinGW_64_bit-Debug/tests/: cmake_install.cmake
build-TetrisConsole-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/: CMakeCache.txt.prev  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-TetrisConsole-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cmakeFiles-v1-e45545b33a767298c8b3.json  (+12 more)
build-TetrisConsole-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-235a81fe7363be705848.json  cmakeFiles-v1-3e8fe63c8829d27513ed.json  codemodel-v2-b40f524011c7661501f1.json  directory-_deps.catch2-build-Debug-72cc2b89209084d78e3f.json  directory-src-Debug-5ee66803b5d74f59d78f.json  index-2024-03-01T14-07-12-0649.json  index-2024-03-01T14-09-51-0664.json  target-Catch2WithMain-Debug-48f53c903e2ba0478c44.json  target-ProjectStructure-Debug-feee6f96aa568e034493.json  target-ProjectStructureTests-Debug-4847d1069b1e8c4fcf33.json
build-TetrisConsole-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-TetrisConsole-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/src/: cmake_install.cmake
build-TetrisConsole-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/tests/: cmake_install.cmake
(+336 files in other folders)
